[gd_scene load_steps=4 format=3 uid="uid://bq8x70a02w1v4"]

[ext_resource type="Script" path="res://scripts/level_intro.gd" id="1_level_intro"]
[ext_resource type="Texture2D" uid="uid://cxonxat8jv4ng" path="res://assets/bg/bg_gradient_720x1280.png" id="2_bg"]
[ext_resource type="Script" uid="uid://jluk044172b1" path="res://addons/i18n/i18n_node.gd" id="3_i18n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_hover"]
bg_color = Color(1, 0.8, 0.4, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
shadow_color = Color(0, 0, 0, 0.4)
shadow_size = 10
shadow_offset = Vector2(0, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(1, 0.6, 0.2, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 8
shadow_offset = Vector2(0, 4)

[node name="LevelIntro" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_level_intro")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bg")
stretch_mode = 6

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -400.0
offset_right = 350.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="LevelTitleLabel" type="Label" parent="MainContainer"]
custom_minimum_size = Vector2(700, 80)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.4, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_font_sizes/font_size = 32
text = "‚úÖ –£—Ä–æ–≤–µ–Ω—å 1 ‚Äî ¬´–ì–∞–≤–∞–Ω—å –ø–æ–Ω—á–∏–∫–æ–≤¬ª"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="LevelDescriptionLabel" type="RichTextLabel" parent="MainContainer"]
custom_minimum_size = Vector2(700, 140)
layout_mode = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 22
text = "Welcome to the world of donuts! Here you'll learn the basics of tower building."
fit_content = true
scroll_active = false
bbcode_enabled = true

[node name="LevelInfoContainer" type="VBoxContainer" parent="MainContainer"]
custom_minimum_size = Vector2(700, 250)
layout_mode = 2
theme_override_constants/separation = 20

[node name="CountdownLabel" type="Label" parent="MainContainer"]
custom_minimum_size = Vector2(700, 40)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.6, 0.2, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_font_sizes/font_size = 20
text = "‚åõ –ê–≤—Ç–æ–º–∞—Ç–∏—á–µ—Å–∫–∏–π –ø–µ—Ä–µ—Ö–æ–¥ —á–µ—Ä–µ–∑ 10 —Å–µ–∫..."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="SkipButton" type="Button" parent="MainContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.2, 0.1, 0.05, 1)
theme_override_colors/font_color = Color(0.2, 0.1, 0.05, 1)
theme_override_colors/font_pressed_color = Color(0.2, 0.1, 0.05, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button")
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "üöÄ –ü–æ–µ—Ö–∞–ª–∏!"
