extends Control

@onready var level_title_label: Label = $MainContainer/LevelTitleLabel
@onready var level_description_label: RichTextLabel = $MainContainer/LevelDescriptionLabel
@onready var level_info_container: VBoxContainer = $MainContainer/LevelInfoContainer
@onready var skip_button: Button = $MainContainer/SkipButton
@onready var countdown_label: Label = $MainContainer/CountdownLabel

var countdown_timer: float = 10.0
var is_skipping: bool = false

func _ready() -> void:
	# –ü–æ–ª—É—á–∞–µ–º –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏—é –æ —Ç–µ–∫—É—â–µ–º —É—Ä–æ–≤–Ω–µ
	var level_info = LevelData.get_current_level_info()
	
	# –ó–∞–ø–æ–ª–Ω—è–µ–º –∏–Ω—Ç–µ—Ä—Ñ–µ–π—Å –¥–∞–Ω–Ω—ã–º–∏ –æ–± —É—Ä–æ–≤–Ω–µ
	_display_level_info(level_info)
	
	# –ó–∞–ø—É—Å–∫–∞–µ–º —Ç–∞–π–º–µ—Ä –∞–≤—Ç–æ–ø–µ—Ä–µ—Ö–æ–¥–∞
	_start_auto_transition()
	
	# –ü–æ–¥–∫–ª—é—á–∞–µ–º –∫–Ω–æ–ø–∫—É –ø—Ä–æ–ø—É—Å–∫–∞
	if skip_button:
		skip_button.pressed.connect(_on_skip_button_pressed)

func _display_level_info(level_info: LevelData.LevelInfo) -> void:
	"""–û—Ç–æ–±—Ä–∞–∂–∞–µ—Ç –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏—é –æ–± —É—Ä–æ–≤–Ω–µ –≤ –∏–Ω—Ç–µ—Ä—Ñ–µ–π—Å–µ"""
	
	# –ó–∞–≥–æ–ª–æ–≤–æ–∫ —É—Ä–æ–≤–Ω—è
	if level_title_label:
		level_title_label.text = "‚úÖ –£—Ä–æ–≤–µ–Ω—å %d ‚Äî ¬´%s¬ª" % [level_info.level_number, level_info.level_name]
		# –ü—Ä–∏–º–µ–Ω—è–µ–º —Ü–≤–µ—Ç–æ–≤—É—é —Å—Ö–µ–º—É –∫ –∑–∞–≥–æ–ª–æ–≤–∫—É
		if level_info.color_scheme:
			level_title_label.add_theme_color_override("font_color", level_info.color_scheme.primary_color)
	
	# –û–ø–∏—Å–∞–Ω–∏–µ —É—Ä–æ–≤–Ω—è - –∏—Å–ø–æ–ª—å–∑—É–µ–º BBCode –¥–ª—è –±–æ–ª–µ–µ –∏–≥—Ä–æ–≤–æ–≥–æ —Å—Ç–∏–ª—è
	if level_description_label:
		_display_gameplay_description(level_info)
	
	# –î–µ—Ç–∞–ª—å–Ω–∞—è –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏—è –æ–± —É—Ä–æ–≤–Ω–µ (—Ç–æ–ª—å–∫–æ –¥–ª—è —É—Ä–æ–≤–Ω–µ–π 3+)
	if level_info_container and level_info.level_number > 2:
		_clear_level_info_container()
		_add_info_item("", level_info.cart_speed)
		_add_info_item("", level_info.objective)
		_add_info_item("", tr("ui.level.info.target_score") % level_info.target_score)
		_add_info_item("", level_info.hint)
	elif level_info_container:
		# –î–ª—è —É—Ä–æ–≤–Ω–µ–π 1 –∏ 2 —Å–∫—Ä—ã–≤–∞–µ–º –¥–æ–ø–æ–ª–Ω–∏—Ç–µ–ª—å–Ω—É—é –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏—é, —Ç–∞–∫ –∫–∞–∫ –æ–Ω–∞ —É–∂–µ –µ—Å—Ç—å –≤ –æ–ø–∏—Å–∞–Ω–∏–∏
		_clear_level_info_container()

func _display_gameplay_description(level_info: LevelData.LevelInfo) -> void:
	"""–û—Ç–æ–±—Ä–∞–∂–∞–µ—Ç –∏–≥—Ä–æ–≤–æ–µ –æ–ø–∏—Å–∞–Ω–∏–µ —É—Ä–æ–≤–Ω—è —Å BBCode"""
	if not level_description_label:
		return
	
	# –í–∫–ª—é—á–∞–µ–º BBCode
	level_description_label.bbcode_enabled = true
	
	var lines: Array = []
	
	# –°–ø–µ—Ü–∏–∞–ª—å–Ω—ã–µ –æ–ø–∏—Å–∞–Ω–∏—è –¥–ª—è –∫–∞–∂–¥–æ–≥–æ —É—Ä–æ–≤–Ω—è
	match level_info.level_number:
		1:
			lines.append("[center]–î–æ–±—Ä–æ –ø–æ–∂–∞–ª–æ–≤–∞—Ç—å! –°–µ–≥–æ–¥–Ω—è —Ç—ã –≤ –ø–æ—Ä—Ç—É, –≥–¥–µ –ø–∞—Ö–Ω–µ—Ç –º–æ—Ä–µ–º –∏ —Å–≤–µ–∂–µ–π –≤—ã–ø–µ—á–∫–æ–π.[/center]")
			lines.append("")
			lines.append("üéØ –ó–∞–¥–∞—á–∞: [b]–ø–æ—Å—Ç—Ä–æ–∏—Ç—å –±–∞—à–Ω—é –∏–∑ –ø–æ–Ω—á–∏–∫–æ–≤[/b]")
			lines.append("üèÉ –ü–æ–Ω—á–∏–∫–∏ –ª–µ—Ç—è—Ç –º–µ–¥–ª–µ–Ω–Ω–æ ‚Äî —É—Å–ø–µ–≤–∞–π —Å—Ç—Ä–æ–∏—Ç—å!")
			lines.append("")
			lines.append("üëÜ –ñ–º–∏ –≤–æ–≤—Ä–µ–º—è ‚Äî –ø—É—Å—Ç—å –±–∞—à–Ω—è —Ä–∞—Å—Ç—ë—Ç!")
			lines.append("üßÅ –ï—Å–ª–∏ –≤—Å—ë –ø–æ–ª—É—á–∏—Ç—Å—è ‚Äî –∑–∞—Ä–∞–±–æ—Ç–∞–µ—à—å 50 –æ—á–∫–æ–≤!")
		2:
			lines.append("[center]üèùÔ∏è –í–µ—Ç–µ—Ä —Å –º–æ—Ä—è –∫—Ä–µ–ø—á–∞–µ—Ç, –∞ –ø–æ–Ω—á–∏–∫–∏ –∫–∞—Ç—è—Ç—Å—è –±—ã—Å—Ç—Ä–µ–µ![/center]")
			lines.append("[center]–¢—ã –≤ —É—é—Ç–Ω–æ–º –≥—Ä–µ—á–µ—Å–∫–æ–º –∫–∞—Ñ–µ –Ω–∞ –±–µ—Ä–µ–≥—É, –≥–¥–µ –±–∞—à–Ω–∏ –∏–∑ —Å–ª–∞–¥–æ—Å—Ç–µ–π —Å—Ç—Ä–æ—è—Ç –ø—Ä—è–º–æ –ø–æ–¥ —à—É–º –ø—Ä–∏–±–æ—è.[/center]")
			lines.append("")
			lines.append("üéØ –ó–∞–¥–∞—á–∞: [b]–Ω–∞–±–µ—Ä–∏ 50 –æ—á–∫–æ–≤ –∏ –¥–æ–∫–∞–∂–∏, —á—Ç–æ —Ç—ã –º–∞—Å—Ç–µ—Ä –±–∞–ª–∞–Ω—Å–∏—Ä–æ–≤–∫–∏![/b]")
			lines.append("üß± –í–Ω–∏–º–∞–Ω–∏–µ: [b]—Å—Ç–µ–Ω–∫–∏ –Ω–∏–∂–µ[/b] ‚Äî –ø—Ä–æ–º–∞—Ö–Ω—É—Ç—å—Å—è –ø—Ä–æ—â–µ!")
			lines.append("")
			lines.append("üëÜ –ñ–º–∏ –≤–æ–≤—Ä–µ–º—è –∏ –Ω–µ –¥–∞–π –ø–æ–Ω—á–∏–∫—É —É–∫–∞—Ç–∏—Ç—å—Å—è –∑–∞ –≥–æ—Ä–∏–∑–æ–Ω—Ç!")
		_:
			# –î–ª—è –æ—Å—Ç–∞–ª—å–Ω—ã—Ö —É—Ä–æ–≤–Ω–µ–π –∏—Å–ø–æ–ª—å–∑—É–µ–º —Å—Ç–∞–Ω–¥–∞—Ä—Ç–Ω–æ–µ –æ–ø–∏—Å–∞–Ω–∏–µ
			lines.append("[center]%s[/center]" % level_info.description)
			lines.append("")
			lines.append("üéØ –ó–∞–¥–∞—á–∞: [b]%s[/b]" % level_info.objective)
			lines.append("üèÉ %s" % level_info.cart_speed)
			lines.append("")
			lines.append("üëÜ %s" % level_info.hint)
	
	level_description_label.text = "\n".join(lines)
	
	# –ü—Ä–∏–º–µ–Ω—è–µ–º —Ü–≤–µ—Ç–æ–≤—É—é —Å—Ö–µ–º—É –∫ RichTextLabel
	if level_info.color_scheme:
		level_description_label.add_theme_color_override("default_color", level_info.color_scheme.text_color)

func _clear_level_info_container() -> void:
	"""–û—á–∏—â–∞–µ—Ç –∫–æ–Ω—Ç–µ–π–Ω–µ—Ä —Å –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏–µ–π –æ–± —É—Ä–æ–≤–Ω–µ"""
	if level_info_container:
		for child in level_info_container.get_children():
			child.queue_free()

func _add_info_item(label_key: String, value_text: String) -> void:
	"""–î–æ–±–∞–≤–ª—è–µ—Ç —ç–ª–µ–º–µ–Ω—Ç –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏–∏ –æ–± —É—Ä–æ–≤–Ω–µ"""
	if not level_info_container:
		return
	
	var info_item = HBoxContainer.new()
	info_item.add_theme_constant_override("separation", 10)
	info_item.custom_minimum_size = Vector2(700, 35)
	
	# –ü–æ–ª—É—á–∞–µ–º —Ü–≤–µ—Ç–æ–≤—É—é —Å—Ö–µ–º—É —Ç–µ–∫—É—â–µ–≥–æ —É—Ä–æ–≤–Ω—è
	var level_info = LevelData.get_current_level_info()
	var color_scheme = level_info.color_scheme if level_info else null
	
	# –ï—Å–ª–∏ –µ—Å—Ç—å –ª–µ–π–±–ª, —Å–æ–∑–¥–∞–µ–º –µ–≥–æ
	if label_key != "":
		var label = Label.new()
		label.text = tr(label_key)
		# –ò—Å–ø–æ–ª—å–∑—É–µ–º —Ü–≤–µ—Ç–æ–≤—É—é —Å—Ö–µ–º—É –∏–ª–∏ —Ü–≤–µ—Ç –ø–æ —É–º–æ–ª—á–∞–Ω–∏—é
		var label_color = color_scheme.primary_color if color_scheme else Color(1.0, 0.8, 0.4, 1.0)
		label.add_theme_color_override("font_color", label_color)
		label.add_theme_font_size_override("font_size", 20)
		label.vertical_alignment = VERTICAL_ALIGNMENT_CENTER
		label.horizontal_alignment = HORIZONTAL_ALIGNMENT_LEFT
		label.custom_minimum_size = Vector2(200, 35)
		label.autowrap_mode = TextServer.AUTOWRAP_OFF
		info_item.add_child(label)
	
	# –õ–µ–π–±–ª —Å–æ –∑–Ω–∞—á–µ–Ω–∏–µ–º (–≤—Å–µ–≥–¥–∞ —Å–æ–∑–¥–∞–µ–º)
	var value = Label.new()
	value.text = value_text
	# –ò—Å–ø–æ–ª—å–∑—É–µ–º —Ü–≤–µ—Ç–æ–≤—É—é —Å—Ö–µ–º—É –∏–ª–∏ —Ü–≤–µ—Ç –ø–æ —É–º–æ–ª—á–∞–Ω–∏—é
	var value_color = color_scheme.text_color if color_scheme else Color(1.0, 1.0, 1.0, 1.0)
	value.add_theme_color_override("font_color", value_color)
	value.add_theme_font_size_override("font_size", 20)
	value.vertical_alignment = VERTICAL_ALIGNMENT_CENTER
	value.horizontal_alignment = HORIZONTAL_ALIGNMENT_LEFT
	value.custom_minimum_size = Vector2(500, 35)
	value.autowrap_mode = TextServer.AUTOWRAP_WORD
	
	info_item.add_child(value)
	level_info_container.add_child(info_item)

func _start_auto_transition() -> void:
	"""–ó–∞–ø—É—Å–∫–∞–µ—Ç –∞–≤—Ç–æ–º–∞—Ç–∏—á–µ—Å–∫–∏–π –ø–µ—Ä–µ—Ö–æ–¥ —á–µ—Ä–µ–∑ 10 —Å–µ–∫—É–Ω–¥"""
	# –ó–∞–ø—É—Å–∫–∞–µ–º —Ç–∞–π–º–µ—Ä –æ–±—Ä–∞—Ç–Ω–æ–≥–æ –æ—Ç—Å—á–µ—Ç–∞
	await get_tree().create_timer(10.0).timeout
	
	if not is_skipping:
		_transition_to_game()

func _on_skip_button_pressed() -> void:
	"""–û–±—Ä–∞–±–æ—Ç—á–∏–∫ –Ω–∞–∂–∞—Ç–∏—è –∫–Ω–æ–ø–∫–∏ –ø—Ä–æ–ø—É—Å–∫–∞"""
	is_skipping = true
	_transition_to_game()

func _transition_to_game() -> void:
	"""–ü–µ—Ä–µ—Ö–æ–¥ –∫ –∏–≥—Ä–æ–≤–æ–π —Å—Ü–µ–Ω–µ"""
	var level_info = LevelData.get_current_level_info()
	print("LevelIntro: –ü–µ—Ä–µ—Ö–æ–¥ –∫ –∏–≥—Ä–æ–≤–æ–π —Å—Ü–µ–Ω–µ - –£—Ä–æ–≤–µ–Ω—å %d: %s" % [level_info.level_number, level_info.level_name])
	
	# –£—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º —É—Ä–æ–≤–µ–Ω—å –≤ GameState –¥–ª—è –∏—Å–ø–æ–ª—å–∑–æ–≤–∞–Ω–∏—è –≤ –∏–≥—Ä–µ
	GameStateManager.reset_for_level(level_info.level_number)
	
	# –ü–µ—Ä–µ—Ö–æ–¥–∏–º –∫ —Å–æ–æ—Ç–≤–µ—Ç—Å—Ç–≤—É—é—â–µ–π —Å—Ü–µ–Ω–µ –∏–≥—Ä—ã
	if level_info.level_number == 1:
		get_tree().change_scene_to_file("res://scenes/Game.tscn")
	elif level_info.level_number == 2:
		get_tree().change_scene_to_file("res://scenes/Game_level_2.tscn")
	else:
		# –î–ª—è –æ—Å—Ç–∞–ª—å–Ω—ã—Ö —É—Ä–æ–≤–Ω–µ–π –∏—Å–ø–æ–ª—å–∑—É–µ–º –æ—Å–Ω–æ–≤–Ω—É—é —Å—Ü–µ–Ω—É
		get_tree().change_scene_to_file("res://scenes/Game.tscn")

func _process(delta: float) -> void:
	"""–û–±–Ω–æ–≤–ª–µ–Ω–∏–µ –æ–±—Ä–∞—Ç–Ω–æ–≥–æ –æ—Ç—Å—á–µ—Ç–∞"""
	if is_skipping:
		return
	
	countdown_timer -= delta
	
	if countdown_label:
		var remaining_seconds = int(ceil(countdown_timer))
		if remaining_seconds > 0:
			countdown_label.text = "‚åõ –ê–≤—Ç–æ–º–∞—Ç–∏—á–µ—Å–∫–∏–π –ø–µ—Ä–µ—Ö–æ–¥ —á–µ—Ä–µ–∑ %d —Å–µ–∫..." % remaining_seconds
		else:
			countdown_label.text = "üöÄ –ó–∞–ø—É—Å–∫–∞–µ–º –∏–≥—Ä—É..."

func _input(event: InputEvent) -> void:
	"""–û–±—Ä–∞–±–æ—Ç–∫–∞ –≤–≤–æ–¥–∞ –¥–ª—è –±—ã—Å—Ç—Ä–æ–≥–æ –ø—Ä–æ–ø—É—Å–∫–∞"""
	if event is InputEventKey and event.pressed:
		if event.keycode == KEY_SPACE or event.keycode == KEY_ENTER:
			_on_skip_button_pressed()
	elif event is InputEventMouseButton and event.pressed:
		if event.button_index == MOUSE_BUTTON_LEFT:
			_on_skip_button_pressed()
